@@ -31,6 +31,10 @@
   - is_powerful_number?/1 - Is a number `n` a powerful number?
   - product_of_prime_factors/1 - Number theoretical function for product of prime factor exponents of `n`
   - is_highly_powerful_number?/1 - Is a number a _highly powerful_ number?
+  - is_perfect_power?/1
+  - is_perfect_square?/1
+  - is_perfect_cube?/1
+  - is_root_of?/2
   
 ### New Sequences
  
